--- a/app.html
+++ b/app.html
@@ -34,6 +34,12 @@
 <!-- Playing with javascript, iPhone and devicemotion event listener -->
 <!-- September 5, 2011, Javascript by Emanuele Feronato -->
 <!-- http://www.emanueleferonato.com/2011/09/05/playing-with-javascript-iphone-and-devicemotion-event-listener/ -->
+
+<!-- Need to add for allowing accelerometer accesss in new iOS --
+Accessing the iPhone Accelerometer with Javascript in iOS 14 and 13
+https://kongmunist.medium.com/accessing-the-iphone-accelerometer-with-javascript-in-ios-14-and-13-e146d18bb175
+-->
+
 <script type="text/javascript">
 	$(document).ready(function(){
 		window.addEventListener("devicemotion",onDeviceMotion,false);
