--- a/index.html
+++ b/index.html
@@ -5,12 +5,27 @@
   <script type="text/javascript" id="MathJax-script" async
     src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
+  
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+    displayAlign: "left",
+    displayIndent: "2em"
+    });
+  </script>
 </head>
   
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-  MathJax
+
+\(
+    \left\{
+        \begin{align}
+            x+y=1\\
+            \frac{1}{2}x-y=5
+        \end{align}
+    \right.
+\)
   
 </body>
 </html>
